<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.SubmissionActivity"
    tools:showIn="@layout/activity_submission">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
    
            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:textColor="@color/colorAccent" />
    
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/underline" />
        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_marginTop="@dimen/input_margin_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/fname"
                    android:background="@drawable/edittext_bg"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:textColorHint="@color/grey"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/input_padding"
                    android:inputType="text"
                    android:layout_marginEnd="@dimen/input_margin"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/lname"
                    android:background="@drawable/edittext_bg"
                    android:layout_weight="1"
                    android:padding="@dimen/input_padding"
                    android:layout_marginStart="@dimen/input_margin"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColorHint="@color/grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <EditText
                android:id="@+id/et_email"
                android:layout_marginTop="@dimen/input_margin_top"
                android:background="@drawable/edittext_bg"
                android:padding="@dimen/input_padding"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/et_github"
                android:background="@drawable/edittext_bg"
                android:padding="@dimen/input_padding"
                android:layout_marginTop="@dimen/input_margin_top"
                android:textColor="@color/black"
                android:hint="@string/project_on_github_link"
                android:textColorHint="@color/grey"
                android:inputType="textUri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.widget.Button
                android:id="@+id/btn_submit"
                android:background="@drawable/btn_submit_bg_2"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:layout_marginTop="@dimen/input_margin_top"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:layout_width="150dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    
    </LinearLayout>
    


</androidx.core.widget.NestedScrollView>